cmake_minimum_required(VERSION 3.5)
project(axlina-framework)
set(CMAKE_CXX_STANDARD 20)
set(Boost_USE_STATIC_LIBS        OFF)
set(Boost_USE_DEBUG_LIBS         OFF)
set(Boost_USE_RELEASE_LIBS       ON) 
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF) 
find_package(Boost 1.66.0) 
include_directories(.)
add_executable(axlina main.cpp)
target_link_libraries(axlina ${Boost_LIBRARIES})
